--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </div>
               <!-- /.box-header -->
               <div class="box-body no-padding">
-                <table class="table table-striped">
+                <table class="table table-striped" >
                   <thead>
                     <tr>
                       <th style="width: 10px">Foto</th>
@@ -151,47 +151,8 @@
                       <th>Ações</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody id="table-users">
 
-                    <tr>
-                      <td><img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm"></td>
-                      <td>Fulano</td>
-                      <td>fulano@Users.com.br</td>
-                      <td>Sim</td>
-                      <td>02/04/2018</td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-xs btn-flat">Editar</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-flat">Excluir</button>
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td>
-                        <img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm">
-                      </td>
-                      <td>Fulano</td>
-                      <td>fulano@Users.com.br</td>
-                      <td>Sim</td>
-                      <td>02/04/2018</td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-xs btn-flat">Editar</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-flat">Excluir</button>
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td>
-                        <img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm">
-                      </td>
-                      <td>Fulano</td>
-                      <td>fulano@Users.com.br</td>
-                      <td>Sim</td>
-                      <td>02/04/2018</td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-xs btn-flat">Editar</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-flat">Excluir</button>
-                      </td>
-                    </tr>
 
                   </tbody>
                 </table>
@@ -558,10 +519,11 @@
         <a target="_blank" href="https://www.Users.com.br">Users</a>
       </div>
       <!-- Default to the left -->
-     
+
     </footer>
 
   </div>
+  <script src="models/User.js"></script>
   <script src="index.js"></script>
 </body>
 
