--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <!-- ./col -->
             </div>
 
-            <div class="box box-success">
+            <div class="box box-success" id="box-user-create">
               <div class="box-header with-border">
                 <h3 class="box-title">Novo Usuário</h3>
               </div>
@@ -504,7 +504,7 @@
               </form>
             </div>
 
-            <div class="box box-primary" style="display: none;">
+            <div class="box box-primary" id="box-user-update" style="display: none;">
               <div class="box-header with-border">
                 <h3 class="box-title">Editar Usuário</h3>
               </div>
@@ -808,7 +808,7 @@
                 <!-- /.box-body -->
                 <div class="box-footer">
                   <button type="submit" class="btn btn-primary">Salvar</button>
-                  <button type="submit" class="btn btn-default">Cancelar</button>
+                  <button type="submit" class="btn btn-default btn-cancel">Cancelar</button>
                 </div>
               </form>
             </div>
