--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
                     <label>Gênero</label>
                     <div class="radio">
                       <label for="exampleInputGenderM">
-                        <input type="radio" id="exampleInputGenderM" name="gender" checked>
+                        <input type="radio" id="exampleInputGenderM" name="gender" value="M" checked>
                         Masculino</label>
                     </div>
                     <div class="radio">
                       <label for="exampleInputGenderF">
-                        <input type="radio" id="exampleInputGenderF" name="gender">
+                        <input type="radio" id="exampleInputGenderF" value="F" name="gender">
                         Feminino</label>
                     </div>
                   </div>
@@ -521,12 +521,12 @@
                     <label>Gênero</label>
                     <div class="radio">
                       <label for="exampleInputGenderM">
-                        <input type="radio" id="exampleInputGenderM" name="gender" checked>
+                        <input type="radio" id="exampleInputGenderM" name="gender" value="M" checked>
                         Masculino</label>
                     </div>
                     <div class="radio">
                       <label for="exampleInputGenderF">
-                        <input type="radio" id="exampleInputGenderF" name="gender">
+                        <input type="radio" id="exampleInputGenderF" name="gender" value="F">
                         Feminino</label>
                     </div>
                   </div>
