--- a/index.html
+++ b/index.html
@@ -796,6 +796,7 @@
                       name="password">
                   </div>
                   <div class="form-group">
+                    <img src="dist/img/boxed-bg.jpg" class="photo" style="max-width: 128px;">
                     <label for="exampleInputFile">Foto</label>
                     <input type="file" id="exampleInputFile" name="photo">
                   </div>
